# TaskList

./: .gitignore  README.md
.github/workflows/: tests.yml
c/: .gitignore  Makefile  app.c  cJSON.c  cJSON.h  config.mk  controller.c  controller.h  dbconfig.c  dbconfig.h  request.c  request.h  responses.c  responses.h  return_t.h  routes.c  routes.h  tags_controller.c  tags_controller.h  tasks_controller.c  tasks_controller.h  utils.c  utils.h  validator.c  validator.h
frontend/: index.css  index.html  index.js
go/: .gitignore  Makefile  app.go  config.mk
nodejs/: Makefile  app.js  package-lock.json  package.json
nodejs/config/: dbconfig.js  server.js
nodejs/controller/: Controller.js  CustomValidator.js  QueryHelper.js  Responses.js  TagController.js  TaskController.js
nodejs/routes/: routes.js
php/: .env  .gitignore  Makefile  app.php  composer.json  config.mk  requirements.txt
php/app/: Tag.php  Task.php
php/app/Exceptions/: Handler.php
php/app/Http/Controllers/: Controller.php  TagsController.php  TasksController.php
php/app/Http/Responses/: ApiResponse.php  CreationResponse.php  DeletionResponse.php  InvalidRequestResponse.php  NotFoundResponse.php  SuccessResponse.php
php/bootstrap/: app.php
php/routes/: web.php
python/: .gitignore  Makefile  Models.py  Schemas.py  TagsController.py  TasksController.py  app.py  config.mk  requirements.txt  responses.py  validator.py
rust/: .gitignore  Cargo.toml  Makefile  config.mk
rust/src/: main.rs
tests/: .gitignore  test_api.py
